--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Shiloh's AP Computer Science Project</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <style>
+    @import url('https://fonts.googleapis.com/css?family=Bitter|Cookie|Press+Start+2P');
+    </style>
   </head>
   <body>
     <h1>About Shiloh</h1>
