--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Calculus Girl</title>
-    <meta charset="utf-8"/>
-    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
     <style>
     @import url('https://fonts.googleapis.com/css?family=Bitter|Cookie|Press+Start+2P');
