--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           break;
         case 4:
           text = "";
-          image1.setAttribute("src", "");
+          image1.setAttribute("src", "Images/uml.png");
           image2.setAttribute("src", "");
           image3.setAttribute("src", "");
           image4.setAttribute("src", "");
