Add project summary

--- a/index.html
+++ b/index.html
@@ -69,7 +69,25 @@
           image4.setAttribute("src", "");
           break;
         case 2:
-          text = "This is where I talk about my FEELINGS project.";
+          text = "Feelings are an interesting human experience. "
+          + "Feelings can have positive and negative impact on people. "
+          + "The strength of the impact depends on the \"weight\" of the feeling. "
+          + "This project models three feelings: being happy, in love, and sad. "
+          + "Happiness can be visualized with smiling. "
+          + "When people are in love, it may feel like there are heart-shaped "
+          + "fireworks all around them. "
+          + "And when people are sad, they want to cry, allowing them to feel "
+          + "a sense of relief from whatever pain or suffering they have. "
+          + "Moreover, people can rant based on how they feel, and they often do. "
+          + "Sometimes, feelings are great because they act as a reminder that we "
+          + "are humans with complex thoughts and emotions. "
+          + "But sometimes, feelings are annoying, and we wish that we didn't have "
+          + "them. In an ideal world, you would be able to delete some of your feelings. "
+          + "But this is code. I can delete feelings if I want to. "
+          + "Please check out my GitHub to see the code for this project, and take a "
+          + "look at the examples to see how the program looks when it's running, or "
+          + "check out the UML diagram to see the relationship between each class and "
+          + "interface.";
           image1.setAttribute("src", "");
           image2.setAttribute("src", "");
           image3.setAttribute("src", "");
