--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
           break;
         case 3:
           text = "";
-          image1.setAttribute("src", "");
-          image2.setAttribute("src", "");
-          image3.setAttribute("src", "");
-          image4.setAttribute("src", "");
+          image1.setAttribute("src", "Images/happiness.png");
+          image2.setAttribute("src", "Images/love.png");
+          image3.setAttribute("src", "Images/sadness.png");
+          image4.setAttribute("src", "Images/deletefeelings.png");
           break;
         case 4:
           text = "";
